# MacroService

./: .gitignore  README.md  run_cluster.sh
.claude/: settings.local.json
client-node/: health-check.js  index.js  integration-test.js  kv-test.js  package.json  raft-client.js  raft-test.js
client-node/proto/: calculator_grpc_pb.js  calculator_pb.js  kv_grpc_pb.js  kv_pb.js
proto/: calculator.proto  kv.proto  raft.proto
server-rust/: Cargo.toml  build.rs
server-rust/src/: config.rs  main.rs  metrics.rs  proto.rs
server-rust/src/kv/: mod.rs  service.rs  store.rs
server-rust/src/raft/: election.rs  log.rs  membership.rs  mod.rs  pending.rs  replication.rs  rpc.rs  state.rs  storage.rs  timer.rs
tests/: helpers.sh  integration_test.sh
