[package]
name = "raft-kv-store"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raft-node"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
